--- a/.github/workflows/flutter_web.yaml
+++ b/.github/workflows/flutter_web.yaml
@@ -4,29 +4,29 @@ on:
   push:
     branches:
       - master
-
+      
 jobs:
-  buld:
-    runs-on: windows-latest
-
+  build:
+    runs-on: ubuntu-latest
+    
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-
+      
     - name: Setup Flutter
       uses: subosito/flutter-action@v1
       with:
         channel: 'beta'
-    
-    - name: Enable flutter web
+        
+    - name: Enable Flutter web 
       run: flutter config --enable-web
-
+      
     - name: Install dependencies
       run: flutter packages get
-
+      
     - name: Build web
       run: flutter build web
-
+      
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
